# UniRhy

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  README.md  wrangler.jsonc
.github/workflows/: builder.yml  cd.yml  ci.yml  deploy-website.yml  e2e.yml  release.yml
README/: README.zh-CN.md  TERMINOLOGY.md
docker/: Dockerfile.jvm  docker-compose.yml
docs/: ANDROID_SAMPLE_ACCURATE_PLAYBACK.md  PLAYBACK_ARCHITECTURE.md  PLAYBACK_BACKGROUND_PLAN.md  PLUGIN_API.md  README.zh-CN.md  TAURI.md
docs/release_notes/: 0.0.1-alpha-1.md  0.0.1-alpha-2.md  0.0.1-alpha-3.md  0.0.1-alpha-4.md  0.0.1-alpha-5.md  (+14 more)
plan/: api-e2e-evolution-plan.md  main-vs-feat-mvp-feature-gap.md  test-all.md  tester.md
scripts/: README.md  dev.sh
server/: .env.example  build.gradle.kts  gradle.properties  settings.gradle.kts
web/: .env.tauri  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  electron-builder.yml  env.d.ts  eslint.config.ts  global.d.ts  index.html  package-lock.json  package.json  tsconfig.vitest.json  vite.config.electron.ts  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  Info.plist  icon-manifest.json  tauri.conf.json  tauri.ios.conf.example.json  tauri.macos.conf.json
web/src-tauri/AppIcon.icon/: icon.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: dmg-volume.icns  icon.icns
web/src-tauri/src/: config.rs  lib.rs  main.rs  proxy.rs
website/: .oxfmtrc.json  .oxlintrc.json  README.md  env.d.ts  eslint.config.ts  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
(+681 files in other folders)
