[package]
name = "unirhy-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "unirhy_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-websocket = "2"
async-trait = "0.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-background-service = { path = "vendor/tauri-plugin-background-service" }
tauri-plugin-android-battery-optimization = "0.1.4"
